启动脚本优化，主要优化java.lang.OutOfMemoryError: PermGen space异常处理